--- a/9/9.1/9.1.md
+++ b/9/9.1/9.1.md
@@ -15,3 +15,26 @@ CREATE INDEX idx_espacio_comercial_id_zona ON espacio_comercial (id_zona);
 --Tabla Zona
 CREATE INDEX idx_zona_id_zona ON zona (id_zona);
 ```
+
+## MÓDULO 8: MANTEMIENTOS
+
+Para consultar todas las incidencias registradas con respecto a una instalación.
+* Proceso sin índice
+```sql
+explain ANALYZE
+select * from registro_de_incidencia ri
+where ri.id_instalacion = 'INS042';
+```
+
+* Proceso con índice
+```sql
+create index idx_incidencia_id_instalacion
+on registro_de_incidencia(id_instalacion);
+
+explain ANALYZE
+select * from registro_de_incidencia ri
+where ri.id_instalacion = 'INS042';
+```
+
+
+
