--- a/9/9.1/9.1.md
+++ b/9/9.1/9.1.md
@@ -25,6 +25,7 @@ explain ANALYZE
 select * from registro_de_incidencia ri
 where ri.id_instalacion = 'INS042';
 ```
+![image](Mantemiento_rendimiento_sin_indice.jpg)
 
 * Proceso con índice
 ```sql
@@ -35,6 +36,8 @@ explain ANALYZE
 select * from registro_de_incidencia ri
 where ri.id_instalacion = 'INS042';
 ```
+![image](Mantenimiento_rendimiento_con_indice.jpg)
+
 
 
 
