--- a/9/9.1/9.1.md
+++ b/9/9.1/9.1.md
@@ -1,4 +1,14 @@
 # 9.1. Índices
+## MÓDULO 3: ARRENDAMIENTOS
+```sql
+--Tabla Espacio_comercial
+CREATE INDEX idx_espacio_comercial_id ON Espacio_Comercial (id_espacio_comercial);
+
+--Tabla Contrato_Alquiler
+CREATE INDEX idx_contrato_alquiler_condicion ON Contrato_Alquiler (condicion);
+CREATE INDEX idx_contrato_alquiler_id_contrato ON Contrato_Alquiler (id_contrato);
+CREATE INDEX idx_contrato_alquiler_id_factura ON Contrato_Alquiler (id_factura);
+```
 
 ## MÓDULO 4: INQUILINOS
 ```sql
