--- a/9/9.2/9.2.md
+++ b/9/9.2/9.2.md
@@ -1,4 +1,44 @@
 # 9.2. Vistas
+## MÓDULO 3: ARRENDAMIENTOS
+Permite a visualizar informacion de los contratos de arrendamiento
+```sql
+CREATE VIEW vista_contratos AS
+SELECT
+    ca.id_contrato AS "Nro Contrato",
+    p.id_persona AS "Inquilino",
+    ec.tipo_inmueble AS "Inmueble",
+    ca.fecha_inicio AS "Fecha Inicio",
+    ca.fecha_vencimiento AS "Fecha Fin",
+    ca.estado AS "Estado",
+    ca.monto AS "Monto Renta"
+FROM
+    Contrato_Alquiler ca
+JOIN
+    Espacio_Comercial ec ON ca.id_espacio_comercial = ec.id_espacio_comercial
+JOIN
+    Inquilino i ON ec.id_espacio_comercial = i.id_espacio_comercial
+JOIN
+    Persona p ON i.id_persona = p.id_persona
+ORDER BY
+    ca.id_contrato;
+```
+
+Permite visualzar detalles del espacio comercial
+```sql
+CREATE VIEW vista_espacios_comerciales AS
+SELECT 
+    Espacio_Comercial.id_espacio_comercial AS "Código",
+    Zonas.referencia AS "Referencia",
+    Zonas.nombre_zona AS "Zona",
+    Espacio_Comercial.tipo_inmueble AS "Tipo de Inmueble",
+    Espacio_Comercial.tarifa AS "Tarifa",
+    Espacio_Comercial.area AS "Área total",
+    Espacio_Comercial.estado AS "Estado"
+FROM 
+    Espacio_Comercial
+JOIN 
+    Zonas ON Espacio_Comercial.nombre_zona = Zonas.nombre_zona;
+```
 
 ## MÓDULO 4: INQUILINOS
 
