--- a/9/9.3/9.3.md
+++ b/9/9.3/9.3.md
@@ -1,4 +1,54 @@
 # 9.3. Secuencias
+## Módulo 3: Arrendamientos
+Secuencia para la tabla Contratos de alquiler
+```sql
+CREATE SEQUENCE seq_id_contrato
+    START WITH 1
+    INCREMENT BY 1
+    MINVALUE 1
+    MAXVALUE 999
+    CACHE 1;
+
+CREATE TABLE Contrato_Alquiler
+(
+  fecha_inicio DATE NOT NULL,
+  monto NUMERIC(10, 2) NOT NULL,
+  condicion VARCHAR(256) NOT NULL,
+  id_contrato CHAR(10) NOT NULL DEFAULT ('CA' || TO_CHAR(NEXTVAL('seq_id_contrato'), 'FM000')),
+  fecha_vencimiento DATE NOT NULL,
+  estado estado_contrato_alquiler NOT NULL,
+  porcentaje NUMERIC(2, 2) NOT NULL,
+  id_documento CHAR(10) NOT NULL,
+  id_factura CHAR(10) NOT NULL,
+  id_espacio_comercial CHAR(10) NOT NULL,
+  PRIMARY KEY (id_contrato),
+  FOREIGN KEY (id_documento) REFERENCES Documento(id_documento),
+  FOREIGN KEY (id_factura) REFERENCES Factura(id_factura),
+  FOREIGN KEY (id_espacio_comercial) REFERENCES Espacio_Comercial(id_espacio_comercial)
+);
+```
+
+Secuencia para la tabla Espacios comerciales
+```sql
+CREATE SEQUENCE seq_id_espacio_comercial
+    START WITH 1
+    INCREMENT BY 1
+    MINVALUE 1
+    MAXVALUE 999
+    CACHE 1;
+
+CREATE TABLE Espacio_Comercial
+(
+  tipo_inmueble VARCHAR(10) NOT NULL,
+  estado VARCHAR(10) NOT NULL,
+  area NUMERIC(6, 2) NOT NULL,
+  id_espacio_comercial CHAR(10) NOT NULL DEFAULT ('EC' || TO_CHAR(NEXTVAL('seq_id_espacio_comercial'), 'FM000')),
+  tarifa NUMERIC(6, 2) NOT NULL,
+  nombre_zona VARCHAR(25) NOT NULL,
+  PRIMARY KEY (id_espacio_comercial),
+  FOREIGN KEY (nombre_zona) REFERENCES Zonas(nombre_zona)
+);
+```
 
 ## Módulo 4: Inquilinos
 
