--- a/9/9.1/9.1.md
+++ b/9/9.1/9.1.md
@@ -25,7 +25,20 @@ CREATE INDEX idx_espacio_comercial_id_zona ON espacio_comercial (id_zona);
 --Tabla Zona
 CREATE INDEX idx_zona_id_zona ON zona (id_zona);
 ```
+## MÓDULO 5: Facturacion
+```sql
+--Tabla Factura
+CREATE INDEX idx_factura_id_factura ON Factura (id_factura);
+CREATE INDEX idx_factura_estado_factura ON Factura (estado_factura);
+CREATE INDEX idx_factura_fecha_emision ON Factura (fecha_emision);
+CREATE INDEX idx_factura_fecha_vencimiento ON Factura (fecha_vencimiento);
 
+
+--Tabla Contrato_Alquiler
+CREATE INDEX idx_contrato_alquiler_condicion ON Contrato_Alquiler (condicion);
+CREATE INDEX idx_contrato_alquiler_id_contrato ON Contrato_Alquiler (id_contrato);
+CREATE INDEX idx_contrato_alquiler_id_factura ON Contrato_Alquiler (id_factura);
+```
 ## MÓDULO 8: MANTEMIENTOS
 
 Para consultar todas las incidencias registradas con respecto a una instalación.
