--- a/8/8.2/8.2.md
+++ b/8/8.2/8.2.md
@@ -25,6 +25,24 @@
 | 4       | El usuario tendrá la oportunidad de Editar cualquier registro de un usuario luego de seleccionar al inquilino y presionar el botón "Eliminar", se le mostrará la ventana emergente I-023<br><br>![image](I023.png)|
 | 5       | ![image](I024.png)|
 
+---
+
+## **MÓDULO 5: FACTURACIÓN**
+
+### **Función Primaria**
+Generar, visualizar y gestionar facturas de manera eficiente para los arrendamientos de los inquilinos en MallPlaza, garantizando un control adecuado del estado de los pagos y facilitando la emisión de recordatorios.
+
+### **Sustentación**
+La implementación de este módulo centraliza la administración de facturas y mejora los procesos de seguimiento y control de los pagos pendientes. Además, permite una interacción fluida con otras funcionalidades relacionadas, como registrar pagos y enviar recordatorios, optimizando la experiencia del usuario y reduciendo errores administrativos.
+---
+
+| **Actividad** | **Descripción** |
+|---------------|------------------|
+| **1** | Al ingresar a la sección "Facturación" y presionar el botón "Generar Facturas", el sistema muestra la pantalla **I-026** donde se listan las facturas generadas para los contratos activos. <br><br>![image](I026.png) |
+| **2** | Cada fila de la tabla incluye información clave: número de factura, nombre del inquilino, inmueble asociado, fechas de inicio y fin del contrato, estado de la factura y monto de renta. |
+| **3** | En la parte inferior, el sistema presenta un botón llamado "Enviar Facturas" que permite enviar las facturas pendientes a los arrendatarios. |
+---
+
 ## MÓDULO 6: RECOBROS
 * **Función Primaria: Gestionar y optimizar todo el proceso de recobros de servicios, para garantizar una satisfaccion completa de los inquilinos en MallPlaza.** 
 * **Sustentación: La gestión centralizada de los recobros facilita el proceso por el cual se realiza el recobro tanto por la solicitud, la planificacion, la negocioacion, registro de acuerdo y ase4gura un seguimiento sencillo y rapido seguimiento al proyecto del recobro. De esta forma tambien se mejora el uso del tiempo y el acceso a los archivos correspondientes.** 
