--- a/9/9.2/9.2.md
+++ b/9/9.2/9.2.md
@@ -110,3 +110,49 @@ JOIN Espacio_Comercial ec ON i.id_espacio_comercial = ec.id_espacio_comercial
 JOIN Zona z ON ec.id_zona = z.id_zona
 GROUP BY z.nombre_zona;
 ```
+
+## MÓDULO 5: FACTURACION
+Permite visualizar la información principal de las facturas, como su número, estado, fechas clave, monto total, y el inquilino asociado.
+```sql
+CREATE VIEW vista_facturas AS
+SELECT
+    f.id_factura AS "Nro Factura",
+    p.nombre AS "Inquilino",
+    ec.tipo_inmueble AS "Inmueble",
+    f.fecha_emision AS "Fecha Emisión",
+    f.fecha_vencimiento AS "Fecha Vencimiento",
+    f.estado_factura AS "Estado",
+    f.monto_total AS "Monto Total"
+FROM
+    Factura f
+JOIN
+    Inquilino i ON f.id_inquilino = i.id_inquilino
+JOIN
+    Persona p ON i.id_persona = p.id_persona
+JOIN
+    Espacio_Comercial ec ON i.id_espacio_comercial = ec.id_espacio_comercial
+ORDER BY
+    f.fecha_vencimiento DESC;
+
+```
+
+Muestra únicamente las facturas con estado "Pendiente", permitiendo priorizar su seguimiento.
+```sql
+CREATE VIEW vista_facturas_pendientes AS
+SELECT
+    f.id_factura AS "Nro Factura",
+    p.nombre AS "Inquilino",
+    f.fecha_emision AS "Fecha Emisión",
+    f.fecha_vencimiento AS "Fecha Vencimiento",
+    f.monto_total AS "Monto Total"
+FROM
+    Factura f
+JOIN
+    Inquilino i ON f.id_inquilino = i.id_inquilino
+JOIN
+    Persona p ON i.id_persona = p.id_persona
+WHERE
+    f.estado_factura = 'Pendiente'
+ORDER BY
+    f.fecha_vencimiento ASC;
+```
