--- a/12/12.1/12.1.md
+++ b/12/12.1/12.1.md
@@ -1,3 +1,15 @@
 # 12.1. Desarrollo Conceptual
 
-Sample content for section 12.1.
+# INFLUX DB
+InfluxDB es un motor de base de datos NoSQL diseñado específicamente para series temporales.
+
+Características:
+
+* Modelo de datos no relacional:
+  Los datos no se organizan en tablas con filas y columnas como en una base de datos relacional. InfluxDB utiliza un modelo basado en "mediciones", "series", "campos" y "etiquetas" para estructurar los datos.
+* Orientada a series temporales:
+  Los datos se agrupan por marcas de tiempo (timestamps) en lugar de claves primarias tradicionales. Esto permite optimizar las consultas sobre datos dependientes del tiempo.
+* Desempeño en escritura y lectura masiva:
+  Diseñada para manejar volúmenes masivos de datos en tiempo real, algo que las bases de datos relacionales pueden tener dificultades en soportar.
+* Almacenamiento optimizado:
+  Implementa métodos de compresión y almacenamiento en niveles que priorizan la eficiencia en series temporales.
