--- a/12/12.1/12.1.md
+++ b/12/12.1/12.1.md
@@ -1,6 +1,7 @@
 # 12.1. Desarrollo Conceptual
 
 # INFLUX DB
+<img src="1_y_uGpOn9XHrB2f-xxKu9Cg.png" alt="Mi imagen" width="500" height="400">
 InfluxDB es un motor de base de datos NoSQL diseñado específicamente para series temporales.
 
 Características:
