--- a/12/12.2/12.2.md
+++ b/12/12.2/12.2.md
@@ -1,3 +1,13 @@
 # 12.2. Escenario de Uso
+## Monitoreo del uso de energía y recursos por locales
+Funcionalidades:
+* Registrar y analizar el consumo energético (electricidad, agua, gas) en cada local del centro comercial.
+* Identificar patrones de consumo por hora, día, semana o mes para una mejor gestión y optimización de recursos.
+* Alertar si algún local supera límites predefinidos de consumo.
 
-Sample content for section 12.2.
+Ventajas:
+* Registro eficiente de datos con marcas de tiempo: InfluxDB permite registrar y almacenar datos como el consumo energético (electricidad, agua, gas) por hora, día, semana o mes de manera eficiente, gracias a su diseño especializado para series temporales.
+  
+* Detección de patrones de consumo: Con herramientas como InfluxQL, puedes realizar consultas avanzadas para identificar patrones estacionales, picos de consumo y tendencias a lo largo del tiempo.
+  
+* Límites predefinidos: InfluxDB puede integrarse con herramientas de monitoreo como Kapacitor para generar alertas en tiempo real cuando el consumo de un local supera un umbral establecido.
