--- a/11/11.1/11.1.md
+++ b/11/11.1/11.1.md
@@ -27,3 +27,14 @@ Vinculación de inquilinos con:
 - Personas: Validación de información personal y documentos asociados.
 - Espacios comerciales: Administración de los inmuebles ocupados por cada inquilino.
 - Zonas: Clasificación de los espacios ocupados según ubicación.
+
+## 8. Módulo de Gestión de mantenimientos programados
+1. Objetivo del módulo: Mediante este módulo la empresa podrá gestionar el mantenimiento preventivo y correctivo del centro comercial.
+
+2. Funcionalidades cubiertas:
+- Permitir al administrador de mantenimiento ver las incidencias y filtrar por categorias para una mejor búsqueda.
+- Permitir al administrador de mantenimiento programar mantenimientos preventivos y correctivos.
+- Permitir al administrador de mantenimiento ver todas las programaciones realizadas.
+  
+**Interacción con otros módulos:**
+- Módulo de logeo y Módulo de empleados: Los usuarios, como los supervisores de mantenimiento o el administrador de mantenimiento del centro comercial, necesitan acceso al sistema o estar logueados para gestionar las tareas de mantenimiento. 
