--- a/11/11.1/11.1.md
+++ b/11/11.1/11.1.md
@@ -31,7 +31,7 @@ Vinculación de inquilinos con:
 ## 8. Módulo de Gestión de mantenimientos programados
 1. Objetivo del módulo: Mediante este módulo la empresa podrá gestionar el mantenimiento preventivo y correctivo del centro comercial.
 
-2. Funcionalidades cubiertas:
+2. Funcionalidades principales cubiertas:
 - Permitir al administrador de mantenimiento ver las incidencias y filtrar por categorias para una mejor búsqueda.
 - Permitir al administrador de mantenimiento programar mantenimientos preventivos y correctivos.
 - Permitir al administrador de mantenimiento ver todas las programaciones realizadas.
