--- a/11/11.1/11.1.md
+++ b/11/11.1/11.1.md
@@ -3,12 +3,12 @@
 Objetivo del módulo: Facilitar a la empresa la administración eficiente de los espacios comerciales.
 
 Funcionalidades principales cubiertas:
-Mantener un registro detallado y actualizado de todos los espacios comerciales.
-Creacion y modificacion de los detalles de los espacios comerciales.
+- Mantener un registro detallado y actualizado de todos los espacios comerciales.
+- Creacion y modificacion de los detalles de los espacios comerciales.
 
 Interacción con otros módulos:
-Módulo de Inquilinos: Para el intercambio de información sobre los arrendatarios y el envío de notificaciones relacionadas con vencimientos, renovaciones u otros eventos del contrato.
-Módulo de Facturación y Pagos: Para generar facturas de alquiler, registrar los pagos realizados por los inquilinos y enviar recordatorios sobre pagos pendientes.
+- Módulo de Inquilinos: Para el intercambio de información sobre los arrendatarios y el envío de notificaciones relacionadas con vencimientos, renovaciones u otros eventos del contrato.
+- Módulo de Facturación y Pagos: Para generar facturas de alquiler, registrar los pagos realizados por los inquilinos y enviar recordatorios sobre pagos pendientes.
 ## Módulo 4: Inquilinos
 1. Objetivo del módulo
 El módulo de Inquilinos tiene como propósito central gestionar de manera eficiente la información de los inquilinos, sus relaciones con los espacios comerciales y las zonas, y permitir una integración fluida con otros módulos del sistema de Mallplaza.
