--- a/9/9.1/9.1.md
+++ b/9/9.1/9.1.md
@@ -39,6 +39,25 @@ CREATE INDEX idx_contrato_alquiler_condicion ON Contrato_Alquiler (condicion);
 CREATE INDEX idx_contrato_alquiler_id_contrato ON Contrato_Alquiler (id_contrato);
 CREATE INDEX idx_contrato_alquiler_id_factura ON Contrato_Alquiler (id_factura);
 ```
+## MÓDULO 6: RECOBROS
+```sql
+-- Tabla Recobros
+CREATE INDEX idx_recobros_id_acuerdo ON Recobros (id_acuerdo);
+CREATE INDEX idx_recobros_estado ON Recobros (estado);
+
+-- Tabla Proyecto_Recobros
+CREATE INDEX idx_proyecto_recobros_estado ON Proyecto_Recobros (estado);
+CREATE INDEX idx_proyecto_recobros_fecha_inicio ON Proyecto_Recobros (fecha_inicio);
+
+-- Tabla Acuerdo
+CREATE INDEX idx_acuerdo_id_proyecto ON Acuerdo (id_proyecto);
+CREATE INDEX idx_acuerdo_tipo_acuerdo ON Acuerdo (tipo_acuerdo);
+
+-- Tabla Solicitud_Recobros
+CREATE INDEX idx_solicitud_recobros_id_recobro ON Solicitud_Recobros (id_recobro);
+CREATE INDEX idx_solicitud_recobros_estado ON Solicitud_Recobros (estado_solicitud);
+```
+
 ## MÓDULO 8: MANTEMIENTOS
 
 Para consultar todas las incidencias registradas con respecto a una instalación.
