--- a/11/11.1/11.1.md
+++ b/11/11.1/11.1.md
@@ -37,6 +37,42 @@ Vinculación de inquilinos con:
 - Espacios comerciales: Administración de los inmuebles ocupados por cada inquilino.
 - Zonas: Clasificación de los espacios ocupados según ubicación.
 
+## Módulo 6: RECOBROS
+1. Objetivo del módulo
+Facilitar la gestión eficiente de recobros asociados a acuerdos, proyectos, y solicitudes, asegurando la transparencia y el control de las obligaciones financieras pendientes en el centro comercial.
+
+2. Funcionalidades cubiertas
+**Gestión de datos principales:**
+- Registro, actualización y eliminación de información de recobros, incluyendo:
+  - Montos asociados, fechas relevantes, estados y vinculaciones a acuerdos específicos.
+  - Relación con solicitudes de recobro y proyectos asociados.
+- Gestión de acuerdos relacionados con recobros:
+  - Creación, modificación y cancelación de acuerdos.
+  - Seguimiento del progreso y cumplimiento de los acuerdos.
+
+**Procesos automatizados (Batch):**
+
+1. Actualización de estados de recobros:
+  - IIdentificación automática de recobros vencidos, en proceso, completados o cancelados.
+  - Cambios automáticos de estado basados en fechas límite o eventos asociados (como la aprobación de una solicitud de recobro).
+2. Reportes de recobros y acuerdos:
+  - Generación de reportes periódicos sobre:
+   - Recobros pendientes, vencidos y completados.
+   - Estados de cumplimiento de los acuerdos financieros.
+3. Gestión de solicitudes de recobro:
+  - Automatización del flujo de solicitudes desde su creación hasta la aprobación o rechazo.
+
+
+**Interacción con otros módulos:**
+
+ - Módulo de Facturación y Pagos:
+  - Registro de pagos relacionados con recobros y generación de comprobantes.
+  - Envío de notificaciones de recordatorio para pagos pendientes de recobros.
+
+ - Módulo de Logeo y Seguridad:
+  - Control de accesos según roles (administradores, supervisores, contadores).
+  - Registro de actividades realizadas en el módulo para auditorías.
+
 ## 8. Módulo de Gestión de mantenimientos programados
 1. Objetivo del módulo: Mediante este módulo la empresa podrá gestionar el mantenimiento preventivo y correctivo del centro comercial.
 
