--- a/11/11.1/11.1.md
+++ b/11/11.1/11.1.md
@@ -65,11 +65,11 @@ Facilitar la gestión eficiente de recobros asociados a acuerdos, proyectos, y s
 
 **Interacción con otros módulos:**
 
- - Módulo de Facturación y Pagos:
+ 1. Módulo de Facturación y Pagos:
   - Registro de pagos relacionados con recobros y generación de comprobantes.
   - Envío de notificaciones de recordatorio para pagos pendientes de recobros.
 
- - Módulo de Logeo y Seguridad:
+ 2. Módulo de Logeo y Seguridad:
   - Control de accesos según roles (administradores, supervisores, contadores).
   - Registro de actividades realizadas en el módulo para auditorías.
 
