--- a/11/11.1/11.1.md
+++ b/11/11.1/11.1.md
@@ -65,13 +65,13 @@ Facilitar la gestión eficiente de recobros asociados a acuerdos, proyectos, y s
 
 **Interacción con otros módulos:**
 
- 1. Módulo de Facturación y Pagos:
-  - Registro de pagos relacionados con recobros y generación de comprobantes.
-  - Envío de notificaciones de recordatorio para pagos pendientes de recobros.
+ - Módulo de Facturación y Pagos:
+    - Registro de pagos relacionados con recobros y generación de comprobantes.
+    - Envío de notificaciones de recordatorio para pagos pendientes de recobros.
 
- 2. Módulo de Logeo y Seguridad:
-  - Control de accesos según roles (administradores, supervisores, contadores).
-  - Registro de actividades realizadas en el módulo para auditorías.
+ - Módulo de Logeo y Seguridad:
+    - Control de accesos según roles (administradores, supervisores, contadores).
+    - Registro de actividades realizadas en el módulo para auditorías.
 
 ## 8. Módulo de Gestión de mantenimientos programados
 1. Objetivo del módulo: Mediante este módulo la empresa podrá gestionar el mantenimiento preventivo y correctivo del centro comercial.
