--- a/11/11.1/11.1.md
+++ b/11/11.1/11.1.md
@@ -38,10 +38,11 @@ Vinculación de inquilinos con:
 - Zonas: Clasificación de los espacios ocupados según ubicación.
 
 ## Módulo 6: RECOBROS
-1. Objetivo del módulo
+1. Objetivo del módulo:
+
 Facilitar la gestión eficiente de recobros asociados a acuerdos, proyectos, y solicitudes, asegurando la transparencia y el control de las obligaciones financieras pendientes en el centro comercial.
 
-2. Funcionalidades cubiertas
+3. Funcionalidades cubiertas
 **Gestión de datos principales:**
 - Registro, actualización y eliminación de información de recobros, incluyendo:
   - Montos asociados, fechas relevantes, estados y vinculaciones a acuerdos específicos.
@@ -53,7 +54,7 @@ Facilitar la gestión eficiente de recobros asociados a acuerdos, proyectos, y s
 **Procesos automatizados (Batch):**
 
 1. Actualización de estados de recobros:
-    - IIdentificación automática de recobros vencidos, en proceso, completados o cancelados.
+    - Identificación automática de recobros vencidos, en proceso, completados o cancelados.
     - Cambios automáticos de estado basados en fechas límite o eventos asociados (como la aprobación de una solicitud de recobro).
 2. Reportes de recobros y acuerdos:
     - Generación de reportes periódicos sobre:
