--- a/11/11.1/11.1.md
+++ b/11/11.1/11.1.md
@@ -37,6 +37,30 @@ Vinculación de inquilinos con:
 - Espacios comerciales: Administración de los inmuebles ocupados por cada inquilino.
 - Zonas: Clasificación de los espacios ocupados según ubicación.
 
+
+# Módulo 5:Facturación y Pagos
+
+1.Objetivo del Módulo  
+Garantizar la gestión eficiente y precisa de las facturas de alquiler.
+
+---
+2.Funcionalidades Principales
+**Generación de facturas automáticas:**  
+  Emisión mensual de facturas basadas en los contratos de arrendamiento vigentes.   
+---
+
+3.Interacción con Otros Módulos
+
+**Módulo de Arrendamiento:**  
+- Recepción de información sobre los contratos vigentes, incluyendo montos, fechas de vencimiento y condiciones de alquiler.   
+
+**Módulo de Inquilinos:**  
+- Envío de notificaciones personalizadas a los inquilinos sobre facturas generadas y vencimientos . 
+- Integración para mostrar el estado financiero de cada inquilino en su perfil.  
+
+---
+
+
 ## Módulo 6: RECOBROS
 1. Objetivo del módulo:
 
