--- a/11/11.1/11.1.md
+++ b/11/11.1/11.1.md
@@ -41,12 +41,12 @@ Vinculación de inquilinos con:
 # Módulo 5:Facturación y Pagos
 
 1.Objetivo del Módulo  
-Garantizar la gestión eficiente y precisa de las facturas de alquiler.
+- Garantizar la gestión eficiente y precisa de las facturas de alquiler.
 
----
 2.Funcionalidades Principales
+
 **Generación de facturas automáticas:**  
-  Emisión mensual de facturas basadas en los contratos de arrendamiento vigentes.   
+- Emisión mensual de facturas basadas en los contratos de arrendamiento vigentes.   
 ---
 
 3.Interacción con Otros Módulos
