--- a/7/7.3/7.3.md
+++ b/7/7.3/7.3.md
@@ -5,107 +5,7 @@ Sample content for section 7.3.
 
 
 --Tabla Empleados
-INSERT INTO Empleado (id_empleado, cargo, first_last_name, second_last_name, fecha_nacimiento, id_persona, id_contrato_empleado) VALUES
-('E001', 'Practicante', 'Perri', 'Wollrauch', '2019-10-05', 'P001', 'C001'),
-('E002', 'Administrador', 'MacGlory', 'Embery', '2027-07-30', 'P002', 'C002'),
-('E003', 'Analista', 'Titmus', 'Faircley', '2021-07-12', 'P003', 'C003'),
-('E004', 'Gerente', 'Fiddy', 'Huckleby', '2023-05-03', 'P004', 'C004'),
-('E005', 'Practicante', 'Mettericke', 'Sciacovelli', '2025-06-02', 'P005', 'C005'),
-('E006', 'Practicante', 'Gergher', 'Greeves', '2021-11-04', 'P006', 'C006'),
-('E007', 'Gerente', 'Pennycuick', 'Hullbrook', '2024-09-21', 'P007', 'C007'),
-('E008', 'Administrador', 'Sarvar', 'Martschke', '2022-03-15', 'P008', 'C008'),
-('E009', 'Administrador', 'Ysson', 'Charnock', '2026-06-21', 'P009', 'C009'),
-('E010', 'Administrador', 'Lidgate', 'Bredgeland', '2022-05-28', 'P010', 'C010'),
-('E011', 'Analista', 'Aslet', 'Pietersma', '2019-10-20', 'P011', 'C011'),
-('E012', 'Administrador', 'Tunder', 'Mirams', '2020-11-30', 'P012', 'C012'),
-('E013', 'Practicante', 'Ortiga', 'Summersett', '2021-03-12', 'P013', 'C013'),
-('E014', 'Administrador', 'Bohan', 'Betjeman', '2025-08-19', 'P014', 'C014'),
-('E015', 'Gerente', 'Dudderidge', 'Thurborn', '2025-10-20', 'P015', 'C015'),
-('E016', 'Analista', 'Elcomb', 'Comerford', '2026-01-30', 'P016', 'C016'),
-('E017', 'Analista', 'Pfeffle', 'Neaverson', '2025-05-11', 'P017', 'C017'),
-('E018', 'Administrador', 'Skittreal', 'Bortol', '2026-03-03', 'P018', 'C018'),
-('E019', 'Gerente', 'Minifie', 'Alderman', '2024-01-30', 'P019', 'C019'),
-('E020', 'Practicante', 'Kibblewhite', 'Cubbino', '2025-01-30', 'P020', 'C020'),
-('E021', 'Analista', 'Turle', 'Tanton', '2021-05-29', 'P021', 'C021'),
-('E022', 'Analista', 'Souness', 'Goldhawk', '2027-03-02', 'P022', 'C022'),
-('E023', 'Analista', 'Goghin', 'Petchell', '2023-03-11', 'P023', 'C023'),
-('E024', 'Practicante', 'Wooff', 'Belton', '2021-10-23', 'P024', 'C024'),
-('E025', 'Analista', 'De Angelo', 'Klimpt', '2020-08-30', 'P025', 'C025'),
-('E026', 'Gerente', 'Lestor', 'Coils', '2024-02-27', 'P026', 'C026'),
-('E027', 'Gerente', 'Wrout', 'Yellop', '2019-12-30', 'P027', 'C027'),
-('E028', 'Practicante', 'Byforth', 'Skermer', '2026-08-07', 'P028', 'C028'),
-('E029', 'Gerente', 'Ruppelin', 'Wem', '2026-08-16', 'P029', 'C029'),
-('E030', 'Analista', 'Cluderay', 'Stiebler', '2021-06-17', 'P030', 'C030'),
-('E031', 'Analista', 'Zanettini', 'McFayden', '2027-06-23', 'P031', 'C031'),
-('E032', 'Practicante', 'Studders', 'Bowyer', '2021-12-13', 'P032', 'C032'),
-('E033', 'Analista', 'Blew', 'Ivey', '2022-07-19', 'P033', 'C033'),
-('E034', 'Gerente', 'Lujan', 'Chippin', '2021-04-18', 'P034', 'C034'),
-('E035', 'Administrador', 'Benns', 'Rennox', '2022-03-25', 'P035', 'C035'),
-('E036', 'Administrador', 'Hynde', 'Lie', '2026-04-06', 'P036', 'C036'),
-('E037', 'Practicante', 'Fischer', 'Batiste', '2026-04-13', 'P037', 'C037'),
-('E038', 'Analista', 'Deave', 'Playfair', '2022-04-26', 'P038', 'C038'),
-('E039', 'Practicante', 'Marran', 'Pay', '2023-02-26', 'P039', 'C039'),
-('E040', 'Administrador', 'Grigoliis', 'Sowte', '2026-12-20', 'P040', 'C040'),
-('E041', 'Practicante', 'Admans', 'Griffen', '2022-07-09', 'P041', 'C041'),
-('E042', 'Administrador', 'Screaton', 'Yemm', '2021-12-14', 'P042', 'C042'),
-('E043', 'Analista', 'Sporton', 'Torricina', '2027-06-19', 'P043', 'C043'),
-('E044', 'Practicante', 'Hanselmann', 'Farnish', '2021-05-28', 'P044', 'C044'),
-('E045', 'Analista', 'McQuaker', 'Brogiotti', '2020-01-12', 'P045', 'C045'),
-('E046', 'Analista', 'Lothean', 'Gatley', '2024-11-09', 'P046', 'C046'),
-('E047', 'Gerente', 'Joscelin', 'Kennon', '2026-08-12', 'P047', 'C047'),
-('E048', 'Practicante', 'Bedbury', 'Cloonan', '2026-10-19', 'P048', 'C048'),
-('E049', 'Practicante', 'McKendry', 'Ivanenkov', '2021-11-15', 'P049', 'C049'),
-('E050', 'Analista', 'Titford', 'Crocetto', '2020-10-14', 'P050', 'C050'),
-('E051', 'Administrador', 'Barrs', 'Extill', '2020-09-17', 'P051', 'C051'),
-('E052', 'Analista', 'Jerschke', 'Bail', '2024-09-21', 'P052', 'C052'),
-('E053', 'Administrador', 'Cobbe', 'Lahy', '2023-11-11', 'P053', 'C053'),
-('E054', 'Practicante', 'Laughton', 'Nollet', '2022-07-21', 'P054', 'C054'),
-('E055', 'Practicante', 'Muckleston', 'Coursor', '2027-01-22', 'P055', 'C055'),
-('E056', 'Analista', 'Liggins', 'Birtwistle', '2024-11-28', 'P056', 'C056'),
-('E057', 'Practicante', 'Fredi', 'Elphey', '2021-02-22', 'P057', 'C057'),
-('E058', 'Gerente', 'Neiland', 'MacVay', '2025-07-12', 'P058', 'C058'),
-('E059', 'Analista', 'Kauter', 'Diddams', '2020-07-21', 'P059', 'C059'),
-('E060', 'Administrador', 'Burchett', 'Heayn', '2026-11-29', 'P060', 'C060'),
-('E061', 'Gerente', 'Letch', 'Hockly', '2025-12-20', 'P061', 'C061'),
-('E062', 'Practicante', 'Burrell', 'Seniour', '2022-06-10', 'P062', 'C062'),
-('E063', 'Administrador', 'Szydel', 'Joaquim', '2027-08-15', 'P063', 'C063'),
-('E064', 'Practicante', 'Chipping', 'Defries', '2024-04-21', 'P064', 'C064'),
-('E065', 'Gerente', 'Kilroy', 'Garnon', '2027-05-14', 'P065', 'C065'),
-('E066', 'Administrador', 'Fargo', 'Frusso', '2020-05-01', 'P066', 'C066'),
-('E067', 'Administrador', 'Barriball', 'Outhwaite', '2022-12-11', 'P067', 'C067'),
-('E068', 'Administrador', 'Demkowicz', 'Danaher', '2025-11-08', 'P068', 'C068'),
-('E069', 'Analista', 'Oxdale', 'Overman', '2027-03-19', 'P069', 'C069'),
-('E070', 'Administrador', 'Crummy', 'Worssam', '2021-03-24', 'P070', 'C070'),
-('E071', 'Gerente', 'Van den Oord', 'Amoroso', '2026-02-27', 'P071', 'C071'),
-('E072', 'Analista', 'Marrow', 'Schultze', '2024-03-23', 'P072', 'C072'),
-('E073', 'Administrador', 'Cockerill', 'Lightbowne', '2025-05-11', 'P073', 'C073'),
-('E074', 'Administrador', 'Gorrell', 'Meyrick', '2020-06-14', 'P074', 'C074'),
-('E075', 'Administrador', 'Branston', 'Brunnstein', '2024-04-10', 'P075', 'C075'),
-('E076', 'Administrador', 'Defazio', 'Gringron', '2020-01-13', 'P076', 'C076'),
-('E077', 'Analista', 'Stacker', 'Matthau', '2026-09-02', 'P077', 'C077'),
-('E078', 'Gerente', 'Canley', 'Kelling', '2023-06-30', 'P078', 'C078'),
-('E079', 'Gerente', 'Brookbanks', 'Fernick', '2026-11-25', 'P079', 'C079'),
-('E080', 'Gerente', 'Dearden', 'Herriott', '2020-04-27', 'P080', 'C080'),
-('E081', 'Gerente', 'Stendall', 'Pale', '2021-07-28', 'P081', 'C081'),
-('E082', 'Administrador', 'Oyes', 'Depas', '2023-09-24', 'P082', 'C082'),
-('E083', 'Analista', 'Godinton', 'Anglish', '2021-03-19', 'P083', 'C083'),
-('E084', 'Administrador', 'Jorez', 'Saltwood', '2024-01-09', 'P084', 'C084'),
-('E085', 'Administrador', 'Nokelby', 'Postance', '2025-07-26', 'P085', 'C085'),
-('E086', 'Administrador', 'Greim', 'Rabbath', '2024-11-21', 'P086', 'C086'),
-('E087', 'Analista', 'Dreghorn', 'Brabon', '2024-06-22', 'P087', 'C087'),
-('E088', 'Analista', 'Gullers', 'Knell', '2022-08-15', 'P088', 'C088'),
-('E089', 'Practicante', 'Sargeson', 'Hepher', '2026-01-28', 'P089', 'C089'),
-('E090', 'Practicante', 'Hutty', 'Silber', '2023-06-19', 'P090', 'C090'),
-('E091', 'Gerente', 'Maxweel', 'Cains', '2027-10-12', 'P091', 'C091'),
-('E092', 'Analista', 'Rohlfing', 'Hibbell', '2025-04-20', 'P092', 'C092'),
-('E093', 'Administrador', 'Shillan', 'Rough', '2026-09-01', 'P093', 'C093'),
-('E094', 'Analista', 'Tidmarsh', 'Swadden', '2024-07-13', 'P094', 'C094'),
-('E095', 'Gerente', 'Vanlint', 'Moggan', '2025-03-01', 'P095', 'C095'),
-('E096', 'Gerente', 'Waddison', 'Besty', '2027-02-11', 'P096', 'C096'),
-('E097', 'Analista', 'Ramet', 'Kingdom', '2024-02-23', 'P097', 'C097'),
-('E098', 'Analista', 'Schild', 'Fidell', '2022-12-14', 'P098', 'C098'),
-('E099', 'Gerente', 'Bridgenorth', 'Penkett', '2023-10-06', 'P099', 'C099'),
-('E100', 'Administrador', 'Stigwood', 'Wightwick', '2022-08-03', 'P100', 'C100');
+INSERT INTO Empleado 
 
 
 --Tabla Persona
