--- a/12/12.4/12.4.md
+++ b/12/12.4/12.4.md
@@ -25,7 +25,7 @@ Luego de haber realizado instalación, procedemos a crear los Buckets
     Lo que se realizó primero fue la configuración para inicializar el cliente de InfluxDB
     Luego se realizó la generación de los datos locales, por cada tipo de local, para finalmente generar los datos generedos y escribirlos en InfluxDB
 
-5. También se puede usar Flux para analizar los datos. Aquí hay un ejemplo para consultar el consumo total de electricidad por local en la última hora ![Ver más](consulting.py)
+5. También se puede usar Flux para analizar los datos. Aquí hay un ejemplo para consultar el consumo total de electricidad por local en la última hora [Ver más](consulting.py)
     
     ![img10](img10.png)
 
