--- a/12/12.md
+++ b/12/12.md
@@ -1,3 +1,11 @@
+<h3>Navegación:<br>
+
+[🔙](../11/11.md) 11. Desarrollo de Aplicación | [📜](../README.md) ÍNDICE
+
 # 12. Uso de un motor NoSQL
 
-Sample content for section 12.
+## CONTENIDO
+- 12.1. [Desarrollo Conceptual](12.1/12.1.md)
+- 12.2. [Escenario de Uso](12.2/12.2.md)
+- 12.3. [Configuración](12.3/12.3.md)
+- 12.4. [Implementación](12.4/12.4.md)
