--- a/11/11.3/11.3.md
+++ b/11/11.3/11.3.md
@@ -1,3 +1,28 @@
 # 11.3. Flujo de Pantallas por Módulo
 
-Sample content for section 11.3.
+## MÓDULO 4: INQUILINOS
+1. Como primera vista tenemos el ingreso a la plataforma de Mallplaza
+   
+   ![inquilino1](inquilino1.png)
+
+2. Luego procedemos a ingresar a la sección del módulo de inquilinos, donde se mostrará la carga de los principales inquilino en MallPlaza
+
+    ![inquilino2](inquilino2.png)
+
+3. Posteriormente también podremos realizar búsquedas de los inquilinos por su nombre
+
+    ![inquilino3](inquilino3.png)
+
+4. Al darle al botón de crear inquilino, se abrirá esta ventana emergente, donde ingresaremos los datos del inquilino que querramos agregar a la base de datos
+
+    ![inquilino4](inquilino4.png)
+
+    ![inquilino5](inquilino5.png)
+
+5. Si se desea eliminar un registro de un inquilino, se motrará esta ventana para realizar el delete del seleccionado.
+
+    ![inquilino6](inquilino6.png)
+
+6. Como último pantalla del flujo se tiene el caso en donde se realiza la creación de un inquilino que ya existe con el mismo nombre u otro registro como RUC
+
+    ![inquilino7](inquilino7.png)
